NLFFullCopySandbox/NLFFullCopySndbx/src/objects/SCTimeframe_Metric__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Last_7_Days__c</fullName>
        <label>Last 7 Days</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month__c</fullName>
        <label>Last Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD__c</fullName>
        <label>MTD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>YTD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yesterday__c</fullName>
        <label>Yesterday</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SCTimeframe Metric</label>
</CustomObject>